# Errly

./: .gitignore  .golangci.yml  .mcp.json  CLAUDE.md  Dockerfile.mcp  Dockerfile.server  LICENSE  Makefile  README.md  agent_install.md  docker-compose.yml  install.sh
.claude/commands/: implement-sdk.md  install-errly.md  use-mcp.md
example/go/: go.mod  main.go
example/python/: test_sdk.py
example/typescript/: package.json  test.mjs
sdk/go/: errly.go  errly_test.go  go.mod
sdk/python/: README.md  errly.py  pyproject.toml  test_errly.py
sdk/ts/: errly.test.ts  index.ts  package-lock.json  package.json
skill/: implement-sdk.md  install-errly.md  use-mcp.md
src/mcp/: go.mod  main.go  main_test.go
src/server/: go.mod  handler.go  handler_test.go  main.go  models.go  ratelimit.go  storage.go  storage_test.go  ui.go  ui.html
test/: integration.sh
