[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "errly"
version = "1.0.0"
description = "Lightweight self-hosted error monitoring SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["error-monitoring", "logging", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
flask  = ["flask>=2.0"]
all    = ["fastapi>=0.100", "starlette>=0.27", "flask>=2.0"]

[tool.setuptools]
py-modules = ["errly"]
